--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-yunxin-im",
   "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
