--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
       - name: setup-node
         uses: actions/checkout@v3
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 14.17.3
-        run: npm install sonarqube-scanner
+      - run: npm install sonarqube-scanner
       - name: SonarQube Scan
-        run: node sonar.js
+      - run: node sonar.js
