--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: setup-node
-        uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - name: setup node
+        uses: actions/setup-node@v3
         with:
           node-version: 14.17.3
-      - run: npm install sonarqube-scanner
+      - name: npm install
+        run: npm install sonarqube-scanner
       - name: SonarQube Scan
         run: node sonar.js
