--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: kitabisa/sonarqube-action@master
       - name: setup node
         uses: actions/setup-node@v3
         with:
