--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sonarqube": "node ./sonarqube.js"
+    "sonarqube-scan": "node ./sonarqube-scan.js"
   },
   "keywords": [
     "yunxin",
