--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
     - name: curl
       uses: indiesdev/curl@v1.1
       with: 
-        url: ${SONARQUBE_URL}/api/sonarqube/scan?packageName=${REPO}&branchName=${BRANCH_NAME}&username=${GITHUB_ACTOR}&commit=${GIT_HASH}&language=javascript&sources=src
+        url: https://5940cq2570.zicp.fun/api/sonarqube/scan
         method: GET
+        params: '{ "packageName": "${REPO}", "branchName": "${BRANCH_NAME}", "username": "${GITHUB_ACTOR}", "commit": "${GIT_HASH}", "language": "javascript", "sources": "src" }'
         
