--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       types: [opened, synchronize, reopened]
 
 env: # 统一设置环境变量
-  SONARQUBE_URL: https://5940cq2570.zicp.fun
+  SONARQUBE_URL: https://1n633k3337.zicp.fun/
   REPO: pigeon
   BRANCH_NAME: develop
   GIT_HASH: $(git rev-parse --short "$GITHUB_SHA")
@@ -20,7 +20,7 @@ jobs:
     - name: curl
       uses: indiesdev/curl@v1.1
       with: 
-        url: https://5940cq2570.zicp.fun/api/sonarqube/scan
+        url: https://1n633k3337.zicp.fun/api/sonarqube/scan
         method: GET
         params: '{ "packageName": "${REPO}", "branchName": "${BRANCH_NAME}", "username": "${GITHUB_ACTOR}", "commit": "${GIT_HASH}", "language": "javascript", "sources": "src" }'
         timeout: 60000
