--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: curl
-      uses: indiesdev/curl@v1.1
-      with: 
-        url: https://1n633k3337.zicp.fun/api/sonarqube/scan
-        method: GET
-        params: '{ "packageName": "$REPO", "branchName": "$BRANCH_NAME", "username": "$GITHUB_ACTOR", "commit": "$GIT_HASH", "language": "javascript", "sources": "src", "repoUrl": "https://github.com/SunGg12138/yunxin-im.git" }'
-        timeout: 60000
-        
+      run:  |
+        curl --location '${SONARQUBE_URL}/api/sonarqube/scan?packageName=${REPO}&branchName=${BRANCH_NAME}&username=${GITHUB_ACTOR}&commit=${GIT_HASH}&language=javascript&sources=src'
