--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ env: # 统一设置环境变量
   SONARQUBE_URL: https://1n633k3337.zicp.fun
   REPO: pigeon
   BRANCH_NAME: develop
+  LAN: language
+  SOURCES: src
 
 name: SonarQube Scan
 jobs:
@@ -21,8 +23,11 @@ jobs:
         echo "sender=$GITHUB_ACTOR" >> $GITHUB_ENV
         echo "commit_hash=$GITHUB_SHA" >> $GITHUB_ENV
         echo "packageName=$REPO" >> $GITHUB_ENV
-        echo "batchName=$BRANCH_NAME" >> $GITHUB_ENV
+        echo "branchName=$BRANCH_NAME" >> $GITHUB_ENV
+        echo "baseUrl=$SONARQUBE_URL" >> $GITHUB_ENV
+        echo "language=$LAN" >> $GITHUB_ENV
+        echo "sources=$SOURCES" >> $GITHUB_ENV
     - name: curl
       run:  |
-        echo $SONARQUBE_URL/api/sonarqube/scan?packageName=${{ env.packageName }}&branchName=${{ env.branchName }}&username=${{ env.sender }}&commit=${{ env.commit_hash }}&language=javascript&sources=src
-        curl --location $SONARQUBE_URL/api/sonarqube/scan?packageName=$REPO&branchName=$BRANCH_NAME&username=$GITHUB_ACTOR&commit=1231321321321&language=javascript&sources=src
+        echo ${{ env.baseUrl }}/api/sonarqube/scan?packageName=${{ env.packageName }}&branchName=${{ env.branchName }}&username=${{ env.sender }}&commit=${{ env.commit_hash }}&language=${{ env.language }}&sources=${{ env.sources }}
+        curl -X GET ${{ env.baseUrl }}/api/sonarqube/scan?packageName=${{ env.packageName }}&branchName=${{ env.branchName }}&username=${{ env.sender }}&commit=${{ env.commit_hash }}&language=${{ env.language }}&sources=${{ env.sources }}
