--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ env: # 统一设置环境变量
   SOURCES: src
   REPO_URL: https://github.com/SunGg12138/yunxin-im.git
 
-name: SonarQube Scan
+name: SonarQube Scanxx
 jobs:
   curl:
     runs-on: ubuntu-latest
