--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 env: # 统一设置环境变量
   SONARQUBE_URL: http://122.9.45.246
   REPO: pigeon
-  BRANCH_NAME: develop
   LAN: javascript
   SOURCES: src
   REPO_URL: https://github.com/SunGg12138/yunxin-im.git
@@ -24,14 +23,13 @@ jobs:
         echo "sender=$GITHUB_ACTOR" >> $GITHUB_ENV
         echo "commitHash=$GITHUB_SHA" >> $GITHUB_ENV
         echo "packageName=$REPO" >> $GITHUB_ENV
-        echo "branchName=$BRANCH_NAME" >> $GITHUB_ENV
         echo "baseUrl=$SONARQUBE_URL" >> $GITHUB_ENV
         echo "language=$LAN" >> $GITHUB_ENV
         echo "sources=$SOURCES" >> $GITHUB_ENV
         echo "repoUrl=$REPO_URL" >> $GITHUB_ENV
     - name: full url
       run: |
-         echo "fullUrl=${{ env.baseUrl }}/api/sonarqube/scan?packageName=${{ env.packageName }}&branchName=${{ env.branchName }}&username=${{ env.sender }}&commit=${{ env.commitHash }}&language=${{ env.language }}&sources=${{ env.sources }}&repoUrl=${{ env.repoUrl }}" >> $GITHUB_ENV
+         echo "fullUrl=${{ env.baseUrl }}/api/sonarqube/scan?packageName=${{ env.packageName }}&actor=${{ env.sender }}&commitSha=${{ env.commitHash }}&language=${{ env.language }}&sources=${{ env.sources }}&repoUrl=${{ env.repoUrl }}&from=github" >> $GITHUB_ENV
     - name: curl
       run:  |
         echo ${{ env.fullUrl }}
