feat: update build.yaml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ env: # 统一设置环境变量
   REPO: pigeon
   LAN: javascript
   SOURCES: src
-  REPO_URL: https://github.com/SunGg12138/yunxin-im.git
+  REPO_URL: git@github.com:SunGg12138/yunxin-im.git
 
 name: SonarQube Scanxx
 jobs:
