feat: update build.yaml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,6 @@ env: # 统一设置环境变量
   REPO: pigeon
   LAN: javascript
   SOURCES: src
-  REPO_URL: git@github.com:SunGg12138/yunxin-im.git
 
 name: SonarQube Scanxx
 jobs:
@@ -26,16 +25,11 @@ jobs:
         echo "baseUrl=$SONARQUBE_URL" >> $GITHUB_ENV
         echo "language=$LAN" >> $GITHUB_ENV
         echo "sources=$SOURCES" >> $GITHUB_ENV
-        echo "repoUrl=$REPO_URL" >> $GITHUB_ENV
         echo "repo=$GITHUB_REPOSITORY" >> $GITHUB_ENV
-        echo "repoid=$GITHUB_REPOSITORY_ID" >> $GITHUB_ENV
-        echo "repoOwner=$GITHUB_REPOSITORY_OWNER" >> $GITHUB_ENV
     - name: full url
       run: |
         echo "${{ env.repo }}"
-        echo "${{ env.repoid }}"
-        echo "${{ env.repoOwner }}"
-        echo "fullUrl=${{ env.baseUrl }}/api/sonarqube/scan?packageName=${{ env.packageName }}&actor=${{ env.sender }}&commitSha=${{ env.commitHash }}&language=${{ env.language }}&sources=${{ env.sources }}&repoUrl=${{ env.repoUrl }}&from=github" >> $GITHUB_ENV
+        echo "fullUrl=${{ env.baseUrl }}/api/sonarqube/scan?packageName=${{ env.packageName }}&actor=${{ env.sender }}&commitSha=${{ env.commitHash }}&language=${{ env.language }}&sources=${{ env.sources }}&repoUrl=git@github.com:${{env.repo}}.git&from=github" >> $GITHUB_ENV
     - name: curl
       run:  |
         echo ${{ env.fullUrl }}
