--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 env: # 统一设置环境变量
   SONARQUBE_URL: http://122.9.45.246:3000
-  REPO: pigeon
+  REPO: pigeon-test
   LAN: javascript
   SOURCES: src
 
