--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -4,7 +4,8 @@ on:
       - develop
 
 env: # 统一设置环境变量
-  WEBHOOK: https://open.feishu.cn/open-apis/bot/v2/hook/5e72d42e-833f-484d-b3c0-433b02e9f417
+  WEBHOOK: https://open.feishu.cn/open-apis/bot/v2/hook/bfba47d7-7368-43f1-b339-a4aad6a6fbfc
+  WEBHOOK2: https://open.feishu.cn/open-apis/bot/v2/hook/bfba47d7-7368-43f1-b339-a4aad6a6fbfc
 
 name: Pull Request Event
 jobs:
@@ -19,4 +20,6 @@ jobs:
         echo "repo=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
     - name: curl
       run:  |
-        curl --location '${{env.WEBHOOK}}' --header 'Content-Type: application/json' --data '{"msg_type":"interactive","card":{"type":"template","data":{"template_id":"ctp_AAm2sd6ncekB","template_variable":{"repo":"${{env.repo}}","headBranch":"${{github.event.pull_request.head.ref}}","actor":"${{github.actor}}","jump_url":"${{ github.event.pull_request.html_url }}"}}}}'
+        for WEBHOOK in $WEBHOOK $WEBHOOK2; do
+          echo "Environment variable: $WEBHOOK"
+        done
