--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -3,6 +3,9 @@ on:
     branches:    
       - master
       - develop
+  pull_request_review:
+    types:
+      - submitted
 
 env: # 统一设置环境变量
   WEBHOOK: https://open.feishu.cn/open-apis/bot/v2/hook/bfba47d7-7368-43f1-b339-a4aad6a6fbfc
@@ -21,6 +24,5 @@ jobs:
         echo "repo=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
     - name: curl
       run:  |
-        for WEBHOOK in $WEBHOOK $WEBHOOK2; do
-          echo "Environment variable: $WEBHOOK"
-        done
+        echo "Environment variable: ${{ github.event.review.state }}"
+        
