--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -24,5 +24,5 @@ jobs:
         echo "repo=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
     - name: curl
       run:  |
-        echo "Environment variable: ${{ github.event.review.state }}"
+        echo "Environment variable: ${{ github.event_name }}"
         
