--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -4,8 +4,12 @@ on:
       - master
       - develop
   pull_request_review:
+    branches:    
+      - master
+      - develop
     types:
       - submitted
+      - dismissed
 
 env: # 统一设置环境变量
   WEBHOOK: https://open.feishu.cn/open-apis/bot/v2/hook/bfba47d7-7368-43f1-b339-a4aad6a6fbfc
