--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -12,7 +12,7 @@ env: # 统一设置环境变量
   WEBHOOK2: https://open.feishu.cn/open-apis/bot/v2/hook/7d45fa33-ad80-4443-b488-2446d9872583
 
 name: Pull Request Event
-jobs:
+jobs:√√
   curl:
     runs-on: ubuntu-latest
     steps:
@@ -27,6 +27,7 @@ jobs:
         if [ "${{ github.event_name }}" == "pull_request" ]; then
           for WEBHOOK in $WEBHOOK $WEBHOOK2; do
             echo "pull_request: $WEBHOOK"
+            echo "pull_request_review: ${{ github.event.review.state }}"
           done
         else
           echo "pull_request_review: ${{ github.event.review.state }}"
