--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -21,6 +21,8 @@ jobs:
         echo "repo=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
     - name: curl
       run:  |
+        echo "Source Branch: ${{ github.event.pull_request.head.ref }}"
+        echo "Target Branch: ${{ github.event.pull_request.base.ref }}"
         if [ "${{ github.event_name }}" == "pull_request" ]; then
           for WEBHOOK in $WEBHOOK $WEBHOOK2; do
             echo "pull_request: $WEBHOOK"
