--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -1,6 +1,6 @@
 on: 
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, closed]
   pull_request_review:
     types: [submitted, dismissed]
 
@@ -26,8 +26,14 @@ jobs:
         if [ "${{ github.event_name }}" == "pull_request" ]; then
           for WEBHOOK in $WEBHOOK $WEBHOOK2; do
             echo "pull_request: $WEBHOOK"
-            echo "pull_request_review: ${{ github.event.review.state }}"
+            echo "Pull Request Action: ${{ github.event.action }}"
+            curl --location '$WEBHOOK' --header 'Content-Type: application/json' --data '{"msg_type":"interactive","card":{"type":"template","data":{"template_id":"ctp_AA14YlhE5N0u","template_variable":{"repo":"${{env.repo}}","headBranch":"${{github.event.pull_request.head.ref}}","actor":"${{github.actor}}","jump_url":"${{ github.event.pull_request.html_url }}","baseBranch":"${{github.event.pull_request.base.ref}}"}}}}'
           done
         else
+          if [ "${{ github.event.review.state }}" == "approved" ]; then
+            for WEBHOOK in $WEBHOOK $WEBHOOK2; do
+              curl --location '$WEBHOOK' --header 'Content-Type: application/json' --data '{"msg_type":"interactive","card":{"type":"template","data":{"template_id":"ctp_AA14jtBsjQrf","template_variable":{"repo":"${{env.repo}}","headBranch":"${{github.event.pull_request.head.ref}}","actor":"${{github.actor}}","jump_url":"${{ github.event.pull_request.html_url }}","approver":"${{github.event.pull_request_review.user.login}}","baseBranch":"${{github.event.pull_request.base.ref}}"}}}}'
+            done
+          fi
           echo "pull_request_review: ${{ github.event.review.state }}"
         fi
