--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -21,14 +21,17 @@ jobs:
         echo "repo=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
     - name: curl
       run:  |
-        echo "Source Branch: ${{ github.event.pull_request.head.ref }}"
-        echo "Target Branch: ${{ github.event.pull_request.base.ref }}"
         if [ "${{ github.event_name }}" == "pull_request" ]; then
-          for WEBHOOK in $WEBHOOK $WEBHOOK2; do
-            echo "pull_request: $WEBHOOK"
-            echo "Pull Request Action: ${{ github.event.action }}"
-            curl --location --header 'Content-Type: application/json' --data '{"msg_type":"interactive","card":{"type":"template","data":{"template_id":"ctp_AA14YlhE5N0u","template_variable":{"repo":"${{env.repo}}","headBranch":"${{github.event.pull_request.head.ref}}","actor":"${{github.actor}}","jump_url":"${{ github.event.pull_request.html_url }}","baseBranch":"${{github.event.pull_request.base.ref}}"}}}}' $WEBHOOK
-          done
+          echo "Pull Request Action: ${{ github.event.action }}"
+          if [ "${{ github.event.action }}" == "closed" ]; then
+            for WEBHOOK in $WEBHOOK $WEBHOOK2; do
+              curl --location --header 'Content-Type: application/json' --data '{"msg_type":"interactive","card":{"type":"template","data":{"template_id":"ctp_AA1R1b8vHl2q","template_variable":{"repo":"${{env.repo}}","headBranch":"${{github.event.pull_request.head.ref}}","actor":"${{github.actor}}","jump_url":"${{ github.event.pull_request.html_url }}","baseBranch":"${{github.event.pull_request.base.ref}}"}}}}' $WEBHOOK
+            done
+          else
+            for WEBHOOK in $WEBHOOK $WEBHOOK2; do
+              curl --location --header 'Content-Type: application/json' --data '{"msg_type":"interactive","card":{"type":"template","data":{"template_id":"ctp_AA14YlhE5N0u","template_variable":{"repo":"${{env.repo}}","headBranch":"${{github.event.pull_request.head.ref}}","actor":"${{github.actor}}","jump_url":"${{ github.event.pull_request.html_url }}","baseBranch":"${{github.event.pull_request.base.ref}}"}}}}' $WEBHOOK
+            done
+          fi
         else
           if [ "${{ github.event.review.state }}" == "approved" ]; then
             for WEBHOOK in $WEBHOOK $WEBHOOK2; do
